# ipmmap

./: .gitignore  LICENSE  README.md  demo_editor.py  demo_manager.py  demo_reader.py  demo_struct.py  pyproject.toml
docs/: genindex.html  index.html  ipmmap.html  ipmmap.struct.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  index.rst  ipmmap.rst  ipmmap.struct.rst  modules.rst
ipmmap/: __init__.py  mmap_manager.py  pickle_mmap_manager.py  struct_mmap_manager.py
ipmmap/exception/: ipmmap_error.py
ipmmap/struct/: __init__.py  base_struct.py  detect_data_struct.py
tests/: test_struct_mmap_mamager.py
