[tool.poetry]
name = "ipmmap"
version = "0.1.0"
description = "A shared memory for inter-process communication in Python"
authors = ["quag-cactus"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fasteners = "^0.18"
sphinx-rtd-theme = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
Sphinx = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
